<resources>
    <string name="app_name">Litenews</string>

    <string-array name="countryList">
        <item>Indonesia</item>
        <item>United States</item>
        <item>United Kingdom</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend_2">VIRUS CORONA</string>
    <string name="recommend_1">COVID-19</string>
    <string name="recommend_3">PRESIDEN JOKOWI</string>
    <string name="home_menu">Home</string>
    <string name="explore_menu">Explore</string>
    <string name="saved_menu">Saved</string>
    <string name="settings_menu">Settings</string>
    <string name="lite">Lite</string>
    <string name="news">News</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="recommended_search">Recommended Search</string>
    <string name="hashtag">#</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="country_of_news">Country of news</string>
    <string name="about">About</string>
    <string name="lorem_s">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lorem_m">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc feugiat nisi sit amet facilisis fringilla.</string>
    <string name="recent_news">Recent News</string>
</resources>
