<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/dividercolor">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:paddingBottom="10dp"
                    android:background="?attr/bgcolor"
                    android:paddingHorizontal="14dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/lite"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="@font/poppinsbold"
                            android:textColor="#3889D3"
                            android:text="@string/news"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppinsbold"/>
                    <View
                        android:layout_width="87dp"
                        android:layout_height="4dp"
                        android:background="?colorAccent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/bgcolor"
                    android:paddingHorizontal="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:weightSum="7">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">
                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_gravity="center"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_contrast"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppinsbold"
                                android:text="@string/dark_mode"
                                android:layout_gravity="center"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_darkmode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end|center_vertical"/>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/settingCountry"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:weightSum="10">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:layout_marginEnd="6dp"
                                android:src="@drawable/ic_flag"
                                tools:ignore="ContentDescription" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppinsbold"
                                    android:text="@string/country_of_news"
                                    android:textSize="18sp" />
                                <TextView
                                    android:id="@+id/tv_selectedCountry"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    tools:text="Indonesia"/>
                            </LinearLayout>
                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="14dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_forward"
                            android:layout_gravity="center_vertical"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/settingAbout"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:weightSum="10">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:layout_marginEnd="6dp"
                                android:src="@drawable/ic_info"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppinsbold"
                                android:text="@string/about"
                                android:layout_gravity="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="14dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_forward"
                            android:layout_gravity="center_vertical"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>



        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>