<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.home.HomeFragment"
        android:id="@+id/swipeRefreshLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/dividercolor"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/bgcolor"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="12dp"
                        android:orientation="horizontal"
                        android:paddingHorizontal="14dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/lite"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="@font/poppinsbold"
                            android:textColor="#3889D3"
                            android:text="@string/news"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_category" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="?attr/bgcolor">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="14dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/top_headlines"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:background="?colorAccent"/>
                    </LinearLayout>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="10dp">
                        <com.smarteist.autoimageslider.SliderView
                            android:id="@+id/imageSlider"
                            android:layout_width="match_parent"
                            android:layout_height="185dp"
                            android:background="@color/placeholder_color"
                            app:sliderAutoCycleDirection="back_and_forth"
                            app:sliderIndicatorGravity="center_horizontal|bottom"
                            app:sliderIndicatorMargin="5dp"
                            app:sliderAutoCycleEnabled="true"
                            app:sliderStartAutoCycle="true"
                            app:sliderIndicatorOrientation="horizontal"
                            app:sliderIndicatorPadding="8dp"
                            app:sliderIndicatorRadius="2.35dp"
                            app:sliderIndicatorMarginBottom="7dp"
                            app:sliderIndicatorSelectedColor="?colorAccent"
                            app:sliderScrollTimeInSec="4"
                            app:sliderIndicatorUnselectedColor="#6b6b6f" />
                    </androidx.cardview.widget.CardView>

                    <include layout="@layout/shimmer"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="14dp"
                        android:paddingTop="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/recent_news"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="?colorAccent"/>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="24dp"
                        android:background="?attr/bgcolor"
                        android:paddingHorizontal="8dp"
                        android:paddingTop="10dp"
                        android:scrollbars="vertical"
                        tools:listitem="@layout/item_news" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>