<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/dividercolor">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:paddingBottom="10dp"
                    android:background="?attr/bgcolor"
                    android:paddingHorizontal="14dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/lite"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="@font/poppinsbold"
                            android:textColor="#3889D3"
                            android:text="@string/news"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:background="@drawable/layout_roundcorneredittext">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="14dp"
                            android:src="@drawable/ic_search"
                            tools:ignore="ContentDescription" />

                        <EditText
                            android:id="@+id/et_search"
                            android:layout_width="match_parent"
                            android:layout_marginHorizontal="10dp"
                            android:lines="1"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:background="@drawable/layout_edittext"
                            android:layout_height="wrap_content"
                            tools:ignore="Autofill,LabelFor,TextFields" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10dp"
                    android:paddingHorizontal="9dp"
                    android:orientation="vertical"
                    android:background="?attr/bgcolor">

                    <LinearLayout
                        android:id="@+id/layout_recommendedsearch"
                        android:layout_width="match_parent"
                        android:paddingTop="12dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/recommended_search"/>

                        <View
                            android:layout_width="100dp"
                            android:layout_height="4dp"
                            android:background="?colorAccent"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/recommend_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="4dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppinsbold"
                                        android:text="@string/hashtag"
                                        android:textColor="?colorAccent"
                                        android:textSize="18sp" />

                                    <TextView
                                        android:id="@+id/tv_recommend_1"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppinsbold"
                                        android:text="@string/recommend_1"
                                        android:textSize="18sp" />
                                </LinearLayout>


                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="end"
                                    android:src="@drawable/ic_forward"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:ignore="ContentDescription" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1.5dp"
                                android:background="?colorAccent"/>
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/recommend_2"
                                android:layout_width="match_parent"
                                android:paddingBottom="4dp"
                                android:layout_height="wrap_content">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppinsbold"
                                        android:text="@string/hashtag"
                                        android:textColor="?colorAccent"
                                        android:textSize="18sp" />

                                    <TextView
                                        android:id="@+id/tv_recommend_2"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppinsbold"
                                        android:text="@string/recommend_2"
                                        android:textSize="18sp" />
                                </LinearLayout>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="end"
                                    android:src="@drawable/ic_forward"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:ignore="ContentDescription" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1.5dp"
                                android:background="?colorAccent"/>
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/recommend_3"
                                android:layout_width="match_parent"
                                android:paddingBottom="4dp"
                                android:layout_height="wrap_content">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppinsbold"
                                        android:text="@string/hashtag"
                                        android:textColor="?colorAccent"
                                        android:textSize="18sp" />

                                    <TextView
                                        android:id="@+id/tv_recommend_3"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppinsbold"
                                        android:text="@string/recommend_3"
                                        android:textSize="18sp" />
                                </LinearLayout>

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="end"
                                    android:src="@drawable/ic_forward"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:ignore="ContentDescription" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1.5dp"
                                android:background="?colorAccent"/>
                        </LinearLayout>


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_newssearched"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:scrollbars="vertical" />
                </LinearLayout>

            </LinearLayout>



        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>